Prevent more overflows based on user input

--- a/static/dib.css
+++ b/static/dib.css
@@ -204,6 +204,10 @@ p.card-text {
   line-height: 2.25rem;
 }
 
+.initiative-text *, .initiative-subtitle *, .initiative-title * {
+  overflow: hidden;
+}
+
 .initiative-text .classification {
   margin-bottom: 0;
   padding-bottom: 1rem;
@@ -376,7 +380,7 @@ em {
   margin-bottom: 1rem;
 }
 
-.subtitle p {
+.initiative-subtitle p {
   font-size: 1.25rem;
   line-height: 2rem;
   margin-bottom: 0;
@@ -1093,7 +1097,7 @@ orange: #D2892B;
     font-size: 1rem;
     line-height: 1.75rem;
   }
-  .subtitle p, .initiative-state p, a.skip-meta {
+  .initiative-subtitle p, .initiative-state p, a.skip-meta {
     font-size: 1.125rem;
     line-height: 1.875rem;
   }
